[package]
name = "tar-parser2"
version = "0.7.1"
edition = "2021"
authors = [
    "Marc-Antoine Perennou <Marc-Antoine@Perennou.com>",
    "Constantin Nickel <constantin.nickel@gmail.com>",
    "Berrysoft <Strawberry_Str@hotmail.com>"
]
description = "tar archive parser using nom"
repository = "https://github.com/Berrysoft/tar-parser.rs"
readme = "README.md"
keywords = ["tar", "archive", "parser", "nom"]
categories = ["filesystem", "parser-implementations"]
license = "MIT"

[dependencies]
nom = "7"

[dev-dependencies]
tar = "0.4"
tempfile = "3.3"
